mdx content update

--- a/app/pages/about/page.mdx
+++ b/app/pages/about/page.mdx
@@ -22,6 +22,17 @@ export const metadata = {
   Commons](https://commons.wikimedia.org/wiki/File:Chicken_February_2009-1.jpg)
 </div>
 
+**Table of Contents**
+
+- [Mascot](#mascot)
+- [Copyright &amp; Fair Use](#copyright--fair-use)
+- [Privacy](#privacy)
+- [Enough BS, WTF is wcu?](#enough-bs-wtf-is-wcu)
+- [Donation](#donation)
+- [寫在最後](#寫在最後)
+
+---
+
 so we asked ChatGPT (probably 3.5) to write the following paragraph for us:
 (I mean, OpenAI should create a [ChickenGPT](https://cybernews.com/tech/catgpt-chatbot-that-meows-everything/) for us)
 
