--- a/app/pages/disclaimer/page.mdx
+++ b/app/pages/disclaimer/page.mdx
@@ -17,6 +17,21 @@ export const metadata = {
   </AlertDescription>
 </Alert>
 
+**Table of Contents**
+
+- [§1 Fair Use of Copyrighted Content](#1-fair-use-of-copyrighted-content)
+  - [§1.1 Signatures](#11-signatures)
+  - [§1.2 Textual Content](#12-textual-content)
+- [§2 Wild Chicken Univeristy Logo](#2-wild-chicken-univeristy-logo)
+  - [§2.1: Covered Assets (and their variants)](#21-covered-assets-and-their-variants)
+  - [§2.2 Elements of Our Logo](#22-elements-of-our-logo)
+    - [§2.2.1 Fish Motif](#221-fish-motif)
+    - [§2.2.2 Daisy Motif](#222-daisy-motif)
+    - [§2.2.3 Chicken](#223-chicken)
+- [§3 Chicken Rights](#3-chicken-rights)
+
+---
+
 The project is licensed under [GPLv3](https://www.gnu.org/licenses/quick-guide-gplv3.en.html), a copyleft licnese for software and other kinds of works.
 Fonts, pictures, and other assets may or may not have their own license.
 
@@ -58,7 +73,7 @@ The composite logo design presented herein is offered for parody and illustrativ
 © Mr-Sheep, licensed under [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/).
 ```
 
-#### §2.1: Covered Assets (and their variants):
+#### §2.1: Covered Assets (and their variants)
 
 - [favicon.svg](https://wcu.edu.pl/images/favicon.svg)
 - [WCU_Alumni.svg](https://wcu.edu.pl/images/WCU_Alumni.svg)
