--- a/app/pages/privacy/page.mdx
+++ b/app/pages/privacy/page.mdx
@@ -21,6 +21,17 @@ export const metadata = {
 
 We cannot see any of your information. We CANNOT upload any of your data to our servers. Actually, we don't even have any servers.
 
+**Table of Contents**
+
+- [§1 Data Collection and Storage](#1-data-collection-and-storage)
+- [§2 How We Use Your Information](#2-how-we-use-your-information)
+- [§3 Data Security](#3-data-security)
+- [§4 Changes to This Policy](#4-changes-to-this-policy)
+- [§5 Contact](#5-contact)
+- [§6 Exception](#6-exception)
+  - [§6.1 Diploma/Admission Letter Email Sending](#61-diplomaadmission-letter-email-sending)
+  - [§6.2 Discussion Section](#62-discussion-section)
+
 ---
 
 ### §1 Data Collection and Storage
